--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -15,7 +15,7 @@ provider:
   runtime: nodejs12.x
  # lambdaHashingVersion: '20201221'
   stage: ${opt:stage, 'prod'}
-  region: ${opt:region, 'us-east-2'}
+  region: ${opt:region, 'us-east-1'}
 
   tracing:
     lambda: true
@@ -24,9 +24,9 @@ provider:
   # Use these variables in the functions and resouorces section below. For example, 
   # ${self:provider.environment.ATTACHMENT_S3_BUCKET}
   environment:
-    PROJECT_NAME: udapeople-serveless
-    TODOS_TABLE: udapeople-serverless-${self:provider.stage}
-    S3_BUCKET_NAME: udapeop-serverless-${self:provider.stage}
+    PROJECT_NAME: udagram-serverless
+    TODOS_TABLE: udagram-serverless-${self:provider.stage}
+    S3_BUCKET_NAME: udagram-serverless-${self:provider.stage}
 
 
 custom:
